loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: value isGroundWhite
while(isGroundWhite==true) {
      ^Poucet1:5: error: not found: value isOverBaggel
    if (isOverBaggel==true) {
        ^